<resources>

    <string name="app_name">MultiLanguageSupport</string>
    <!-- to support App for Multilanguage,all strings must be written in strings.xml -->
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Do not have an account?Sign up</string>
    <string name="changeMyLang">Change Language</string>
</resources>
